fix: Make cursor visible on webpage

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    cursor: none; /* Hide default cursor */
+    
     animation: background-pan 60s linear infinite;
 }
 
